commented favicon out

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	
 	<!-- FAVICON -->
-	<link rel="shortcut icon" href="media/img/tiger_logo.png">
+	<!-- <link rel="shortcut icon" href="media/img/tiger_logo.png"> -->
 	
 	<!-- CSS -->
 	<link rel="stylesheet" href="assets/css/reset.css">
