--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	
   	<!-- ABOUT this page -->
-	<title>Planeteers</title>
+	<title>Jeep_HW1</title>
 	<meta name="description" content="This page contains, etc...">
 	<meta name="keywords" content="keyword1, keyword1, keyword1, etc..."  />
 	<meta name="author" content="Melissa Sattler">
@@ -18,9 +18,9 @@
 	<!-- <link rel="shortcut icon" href="media/img/tiger_logo.png"> -->
 	
 	<!-- CSS -->
-	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 
 	<!-- SCSS -->
 	
@@ -31,7 +31,7 @@
 
 	<!-- JAVASCRIPT -->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="media/js/script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
