--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -27,7 +25,19 @@
 </head>
 
 <body>
-	<header>menu</header>
+	<header>
+		<div class="headerBox">
+			<h1>web<span>dev1</span></h1>
+			<nav>
+				<ul>
+					<li><a href="home.html" class="active home">Home</a></li>
+					<li><a href="work.html" class="work">Work</a></li>
+					<li><a href="about.html" class="aboutLink">About</a></li>
+					<li><a href="resources.html" class="resources">Resources</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header><!--End of Navigation and Header-->
 
 	<!-- JAVASCRIPT -->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
