added jeep logos

--- a/index.html
+++ b/index.html
@@ -16,32 +16,30 @@
 	<!-- <link rel="shortcut icon" href="media/img/tiger_logo.png"> -->
 	
 	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="assets/css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 
 	<!-- SCSS -->
 	
 </head>
 
 <body>
-	<header>
-		<div class="headerBox">
-			<h1>web<span>dev1</span></h1>
-			<nav>
-				<ul>
-					<li><a href="home.html" class="active home">Home</a></li>
-					<li><a href="work.html" class="work">Work</a></li>
-					<li><a href="about.html" class="aboutLink">About</a></li>
-					<li><a href="resources.html" class="resources">Resources</a></li>
-				</ul>
-			</nav>
-		</div>
+	<header class="header">
+		<img src="assets/img/jeep_logo.jpg" class="logo"><h1>web<span>dev1</span></h1>
+		<nav>
+			<ul>
+				<li><a href="home.html" class="active home">Home</a></li>
+				<li><a href="work.html" class="work">Work</a></li>
+				<li><a href="about.html" class="aboutLink">About</a></li>
+				<li><a href="resources.html" class="resources">Resources</a></li>
+			</ul>
+		</nav>
 	</header><!--End of Navigation and Header-->
 
 	<!-- JAVASCRIPT -->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 
 </body>
 </html>
