--- a/index.html
+++ b/index.html
@@ -24,18 +24,42 @@
 	
 </head>
 
-<body>
+<body class="body body--wrapper">
 	<header class="header">
-		<img src="assets/img/jeep_logo.jpg" class="logo"><h1>web<span>dev1</span></h1>
-		<nav>
+		<img class="header__logo" src="assets/img/jeep_logo.png">
+		<nav class="header__nav">
 			<ul>
-				<li><a href="home.html" class="active home">Home</a></li>
-				<li><a href="work.html" class="work">Work</a></li>
-				<li><a href="about.html" class="aboutLink">About</a></li>
-				<li><a href="resources.html" class="resources">Resources</a></li>
+				<li><a href="" class="active header__nav-home">Home</a></li>
+				<li><a href="" class="header__nav-work">Vehicles</a></li>
+				<li><a href="" class="header__nav-shoppingTools">Shopping Tools</a></li>
+				<li><a href="" class="header__nav-capability">Capability</a></li>
+				<li><a href="" class="header__nav-owners">Owners</a></li>
 			</ul>
 		</nav>
+		<img class="header__logo-banner"src="assets/img/jeep_logo--banner.png">
 	</header><!--End of Navigation and Header-->
+
+	<div class="body__featured-image">
+
+		<div class="body__featured-image-bkg"></div>
+		<div class="body__featured-image-fg"></div>
+		
+		<div class="body__squares-container">
+			<div class="body__squares body__squares--430x200">
+				<p>430x200</p>
+			</div> 
+			<div class="body__squares body__squares--310x200">
+				<p>310x200</p>
+			</div>
+			<div class="body__squares body__squares--310x200">
+				<p>310x200</p>
+			</div>
+		</div>
+
+	</div>
+	<footer>
+
+	</footer>
 
 	<!-- JAVASCRIPT -->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
