updating colors and positioning

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 </head>
 
-<body class="body body--wrapper">
+<body>
 	<header class="header">
 		<img class="header__logo" src="assets/img/jeep_logo.png">
 		<nav class="header__nav">
@@ -38,27 +38,109 @@
 		</nav>
 		<img class="header__logo-banner"src="assets/img/jeep_logo--banner.png">
 	</header><!--End of Navigation and Header-->
+	<div class="body body--wrapper">
+		<div class="body__featured-image">
 
-	<div class="body__featured-image">
-
-		<div class="body__featured-image-bkg"></div>
-		<div class="body__featured-image-fg"></div>
-		
-		<div class="body__squares-container">
-			<div class="body__squares body__squares--430x200">
-				<p>430x200</p>
-			</div> 
-			<div class="body__squares body__squares--310x200">
-				<p>310x200</p>
+			<div class="body__featured-image-bkg"></div>
+			<div class="body__featured-image-fg"></div>
+			
+			<div class="body__squares-container">
+				<div class="body__squares body__squares--430x200">
+					<p>430x200</p>
+				</div> 
+				<div class="body__squares body__squares--310x200">
+					<p>310x200</p>
+				</div>
+				<div class="body__squares body__squares--310x200">
+					<p>310x200</p>
+				</div>
 			</div>
-			<div class="body__squares body__squares--310x200">
-				<p>310x200</p>
+
+		</div>
+	</div>
+	<footer class="footer">
+		<div class="footer__links-container">
+
+			<div class="footer__links footer__links-vehicles">
+				<div class="footer__links--header">
+					Vehicles
+				</div>
+				<div class="footer__links--disclaimers">
+					<p>Compass</p>
+					<p>Cherokee</p>
+					<p>Grand Cherokee</p>
+					<p>Liberty</p>
+					<p>Patriot</p>
+					<p>Wrangler</p>
+					<p>Wrangler Unlimited</p>
+				</div>
+			</div>
+
+			<div class="footer__links footer__links-research">
+				<div class="footer__links--header">
+					Research
+				</div>
+				<div class="footer__links--disclaimers">
+					<p>Build &amp; Price a Value</p>
+					<p>Model Compare</p>
+					<p>Grand Cherokee Compare</p>
+					<p>Competitive Compare</p>
+					<p>Get a Brochure</p>
+					<p>Sign Up For Updates</p>
+				</div>
+			</div>
+
+			<div class="footer__links footer__links-capability">
+				<div class="footer__links--header">
+					Capability
+				</div>
+				<div class="footer__links--disclaimers">
+					<p>Trail Rated&reg;</p>
+					<p>Capabilities Comparison</p>
+					<p>4x4 Systems</p>
+					<p>Towing</p>
+					<p>Off-Road Guide</p>
+					<p>FAQ &amp; Glossary</p>
+					<p>Fuel Efficiency</p>
+				</div>
+			</div>
+
+			<div class="footer__links footer__links-locate">
+				<div class="footer__links--header">
+					Locate
+				</div>
+				<div class="footer__links--disclaimers">
+					<p>Find A Dealer</p>
+					<p>Search New Inventory</p>
+					<p>Search Pre-Owned</p>
+					<p>Schedule a Test Drive</p>
+				</div>
+			</div>
+
+			<div class="footer__links footer__links-owners">
+				<div class="footer__links--header">
+					Owners
+				</div>
+				<div class="footer__links--disclaimers">
+					<p>Owners Site Log-In</p>
+					<p>Vehicle Order Status</p>
+					<p>Register My Vehicle</p>
+					<p>Owner &amp; Service Manuals</p>
+					<p>Jeep&reg; Warranty</p>
+					<p>Mopar&reg; Vehicle Protection</p>
+					<p>Towing Assistance</p>
+				</div>
+			</div>
+
+			<div class="footer__copyright">
+				<p>&copy;2013 Chrysler Group LLC. All Rights Reserved.</p>
+				<p>Chrysler, Jeep, Dodge, Ram, SRT, Mopar and the Pentastar logo are registered trademarks of Chrysler Group LLC.</p>
+				<p>FIAT is a registered trademark of Fiat Group Marketing &amp; Corporate Communication S.p.A, used under license by Chrysler Group LLC.</p>
+				<p>*MSRP excludes destination, taxes, title and registration fees. Starting at price refers to the base model, optional equipment not included. A more expensive model may be shown. Pricing and offers may change at any time without notification. To get full pricing details, see your dealer.</p>
+				<p>**Excludes SRT models. Offer valid on vehicles equipped with V8 engines only. Residency restrictions apply. See dealer for details. Must take retail delivery by 7/31/2013.</p>
+				<p>&dagger;Financing and deferred monthly payments for well-qualified buyers when financed through Chrysler Capital. Not all buyers qualify. Interest, if any, occurs from the date of purchase. Lease offers are not eligible for differed payments. Restrictions apply. See dealer for details. Must take retail delivery by July 31, 2013</p>
 			</div>
 		</div>
-
-	</div>
-	<footer>
-
 	</footer>
 
 	<!-- JAVASCRIPT -->
