--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</nav>
 		<img class="header__logo-banner"src="assets/img/jeep_logo--banner.png">
 	</header><!--End of Navigation and Header-->
-	<div class="body body--wrapper">
+	<div class="body--wrapper">
 		<div class="body__featured-image">
 
 			<div class="body__featured-image-bkg"></div>
