--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<img class="header__logo" src="assets/img/jeep_logo.png">
 		<nav class="header__nav">
 			<ul>
-				<li><a href="" class="active header__nav-home">Home</a></li>
-				<li><a href="" class="header__nav-work">Vehicles</a></li>
-				<li><a href="" class="header__nav-shoppingTools">Shopping Tools</a></li>
-				<li><a href="" class="header__nav-capability">Capability</a></li>
-				<li><a href="" class="header__nav-owners">Owners</a></li>
+				<li><a href="" class="active header__nav-links">Home</a></li>
+				<li><a href="" class="header__nav-links">Vehicles</a></li>
+				<li><a href="" class="header__nav-links">Shopping Tools</a></li>
+				<li><a href="" class="header__nav-links">Capability</a></li>
+				<li><a href="" class="header__nav-links">Owners</a></li>
 			</ul>
 		</nav>
 		<img class="header__logo-banner"src="assets/img/jeep_logo--banner.png">
