--- a/vehicles.html
+++ b/vehicles.html
@@ -29,8 +29,8 @@
 		<img class="header__logo" src="assets/img/jeep_logo.png">
 		<nav class="header__nav">
 			<ul>
-				<li><a href="index.html" class="active header__nav-links">Home</a></li>
-				<li><a href="vehicles.html" class="header__nav-links">Vehicles</a></li>
+				<li><a href="index.html" class="header__nav-links">Home</a></li>
+				<li><a href="vehicles.html" class="active header__nav-links">Vehicles</a></li>
 				<li><a href="" class="header__nav-links">Shopping Tools</a></li>
 				<li><a href="" class="header__nav-links">Capability</a></li>
 				<li><a href="" class="header__nav-links">Owners</a></li>
