--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 			<div class="body__featured-image-fg"></div>
 			
 			<div class="body__squares-container">
-				<div class="body__squares body__squares--430x200">
+				<div class="body__squares body__squares--large">
 					<p>430x200</p>
 				</div> 
-				<div class="body__squares body__squares--310x200">
+				<div class="body__squares body__squares--medium">
 					<p>310x200</p>
 				</div>
-				<div class="body__squares body__squares--310x200">
+				<div class="body__squares body__squares--medium">
 					<p>310x200</p>
 				</div>
 			</div>
