--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- <link rel="shortcut icon" href="media/img/tiger_logo.png"> -->
 	
 	<!-- CSS -->
-	<link rel="stylesheet" href="assets/css/reset.css">
+	<!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/main.css">
 
@@ -27,31 +27,31 @@
 <body>
 	<header class="header">
 		<img class="header__logo" src="assets/img/jeep_logo.png">
-		<nav class="header__nav">
+		<nav class="nav">
 			<ul>
-				<li><a href="index.html" class="active header__nav-links">Home</a></li>
-				<li><a href="vehicles.html" class="header__nav-links">Vehicles</a></li>
-				<li><a href="" class="header__nav-links">Shopping Tools</a></li>
-				<li><a href="" class="header__nav-links">Capability</a></li>
-				<li><a href="" class="header__nav-links">Owners</a></li>
+				<li><a href="index.html" class="nav-item--active">Home</a></li>
+				<li><a href="vehicles.html" class="nav-item">Vehicles</a></li>
+				<li><a href="" class="nav-item">Shopping Tools</a></li>
+				<li><a href="" class="nav-item">Capability</a></li>
+				<li><a href="" class="nav-item">Owners</a></li>
 			</ul>
 		</nav>
 		<img class="header__logo-banner"src="assets/img/jeep_logo--banner.png">
 	</header><!--End of Navigation and Header-->
-	<div class="body--wrapper">
-		<div class="body__featured-image">
+	<div class="hero">
+		<div class="featured-image">
 
-			<div class="body__featured-image-bkg"></div>
-			<div class="body__featured-image-fg"></div>
+			<div class="featured-image-bkg"></div>
+			<div class="featured-image-fg"></div>
 			
-			<div class="body__squares-container">
-				<div class="body__squares body__squares--large">
+			<div class="squares-container">
+				<div class="squares squares--large">
 					<p>430x200</p>
 				</div> 
-				<div class="body__squares body__squares--medium">
+				<div class="squares squares--medium">
 					<p>310x200</p>
 				</div>
-				<div class="body__squares body__squares--medium">
+				<div class="squares squares--medium">
 					<p>310x200</p>
 				</div>
 			</div>
