add all changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<img class="header__logo" src="assets/img/jeep_logo.png">
 		<nav class="nav">
 			<ul>
-				<li><a href="index.html" class="nav-item--active">Home</a></li>
+				<li><a href="index.html" class="nav-item--highlight">Home</a></li>
 				<li><a href="vehicles.html" class="nav-item">Vehicles</a></li>
 				<li><a href="" class="nav-item">Shopping Tools</a></li>
 				<li><a href="" class="nav-item">Capability</a></li>
@@ -41,8 +41,10 @@
 	<div class="hero">
 		<div class="featured-image">
 
-			<div class="featured-image-bkg"></div>
-			<div class="featured-image-fg"></div>
+			<div class="carousel">
+				<div class="featured-image-bkg"></div>
+				<div class="featured-image-fg"></div>
+			</div>
 			
 			<div class="squares-container">
 				<div class="squares squares--large">
@@ -59,13 +61,14 @@
 		</div>
 	</div>
 	<footer class="footer">
+
 		<div class="footer__links-container">
 
-			<div class="footer__links footer__links-vehicles">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Vehicles
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Compass</p>
 					<p>Cherokee</p>
 					<p>Grand Cherokee</p>
@@ -76,11 +79,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-research">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Research
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Build &amp; Price a Value</p>
 					<p>Model Compare</p>
 					<p>Grand Cherokee Compare</p>
@@ -90,11 +93,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-capability">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Capability
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Trail Rated&reg;</p>
 					<p>Capabilities Comparison</p>
 					<p>4x4 Systems</p>
@@ -105,11 +108,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-locate">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Locate
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Find A Dealer</p>
 					<p>Search New Inventory</p>
 					<p>Search Pre-Owned</p>
@@ -117,11 +120,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-owners">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Owners
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Owners Site Log-In</p>
 					<p>Vehicle Order Status</p>
 					<p>Register My Vehicle</p>
@@ -131,6 +134,7 @@
 					<p>Towing Assistance</p>
 				</div>
 			</div>
+		</div><!--end of footer-links-->
 
 			<div class="footer__copyright">
 				<p>&copy;2013 Chrysler Group LLC. All Rights Reserved.</p>
@@ -140,7 +144,7 @@
 				<p>**Excludes SRT models. Offer valid on vehicles equipped with V8 engines only. Residency restrictions apply. See dealer for details. Must take retail delivery by 7/31/2013.</p>
 				<p>&dagger;Financing and deferred monthly payments for well-qualified buyers when financed through Chrysler Capital. Not all buyers qualify. Interest, if any, occurs from the date of purchase. Lease offers are not eligible for differed payments. Restrictions apply. See dealer for details. Must take retail delivery by July 31, 2013</p>
 			</div>
-		</div>
+		<!-- </div> -->
 	</footer>
 
 	<!-- JAVASCRIPT -->
