--- a/vehicles.html
+++ b/vehicles.html
@@ -30,7 +30,7 @@
 		<nav class="nav">
 			<ul>
 				<li><a href="index.html" class="nav-item">Home</a></li>
-				<li><a href="vehicles.html" class="nav-item--active">Vehicles</a></li>
+				<li><a href="vehicles.html" class="nav-item--highlight">Vehicles</a></li>
 				<li><a href="" class="nav-item">Shopping Tools</a></li>
 				<li><a href="" class="nav-item">Capability</a></li>
 				<li><a href="" class="nav-item">Owners</a></li>
@@ -41,31 +41,57 @@
 	<div class="hero">
 		<div class="featured-image">
 
-			<div class="featured-image-bkg"></div>
-			<div class="featured-image-fg"></div>
+			<div class="carousel">
+				<div class="featured-image__first"></div>
+				<h1>Adventure Fueled by The Power Within</h1>
+				<p class="featured-image__subtitle">
+					The New 2013 Wrangler
+				</p>
+				<p class="featured-image__desc">
+					A tough authentic legend is born to the rule the trails and the open road, the 2013 jeep Wrangler is made to make everday behind the wheel, a thrilling adventure.
+				</p>
+
+				<!-- <div class="featured-image-fg"></div> -->
+			</div>
 			
 			<div class="squares-container">
-				<div class="squares squares--large">
-					<p>430x200</p>
+				<div class="squares--xlarge">
+					<div>
+						<p>MSRP Starting at</p>
+						<p>$22,295</p>
+						<p>This is disclaimer information. It is fairly small</p>
+					</div>
+					<div>
+						<p>Lease for</p>
+						<p>$309</p>
+						<p>per month for 36 months</p>
+						<p>This is disclaimer information. It is fairly small</p>
+					</div>
+
+					<img class="promo__header-img" src="assets/img/promo-header.png">
+					
 				</div> 
-				<div class="squares squares--medium">
-					<p>310x200</p>
+
+				<div class="awards">
+					<img class="awards-background" src="assets/img/awards-background.jpg">
+					<img class="awards-logo" src="assets/img/award-icon.png">
+					<p>The Jeep brand wins it's third consecutive <span>"Four Wheeler of the Year"</span> award from Four Wheeler magazine</p>
+
 				</div>
-				<div class="squares squares--medium">
-					<p>310x200</p>
-				</div>
+		
 			</div>
 
 		</div>
 	</div>
 	<footer class="footer">
+
 		<div class="footer__links-container">
 
-			<div class="footer__links footer__links-vehicles">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Vehicles
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Compass</p>
 					<p>Cherokee</p>
 					<p>Grand Cherokee</p>
@@ -76,11 +102,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-research">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Research
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Build &amp; Price a Value</p>
 					<p>Model Compare</p>
 					<p>Grand Cherokee Compare</p>
@@ -90,11 +116,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-capability">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Capability
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Trail Rated&reg;</p>
 					<p>Capabilities Comparison</p>
 					<p>4x4 Systems</p>
@@ -105,11 +131,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-locate">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Locate
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Find A Dealer</p>
 					<p>Search New Inventory</p>
 					<p>Search Pre-Owned</p>
@@ -117,11 +143,11 @@
 				</div>
 			</div>
 
-			<div class="footer__links footer__links-owners">
-				<div class="footer__links--header">
+			<div class="footer__links">
+				<h2>
 					Owners
-				</div>
-				<div class="footer__links--disclaimers">
+				</h2>
+				<div class="footer__links--items">
 					<p>Owners Site Log-In</p>
 					<p>Vehicle Order Status</p>
 					<p>Register My Vehicle</p>
@@ -131,6 +157,7 @@
 					<p>Towing Assistance</p>
 				</div>
 			</div>
+		</div><!--end of footer-links-->
 
 			<div class="footer__copyright">
 				<p>&copy;2013 Chrysler Group LLC. All Rights Reserved.</p>
@@ -140,7 +167,7 @@
 				<p>**Excludes SRT models. Offer valid on vehicles equipped with V8 engines only. Residency restrictions apply. See dealer for details. Must take retail delivery by 7/31/2013.</p>
 				<p>&dagger;Financing and deferred monthly payments for well-qualified buyers when financed through Chrysler Capital. Not all buyers qualify. Interest, if any, occurs from the date of purchase. Lease offers are not eligible for differed payments. Restrictions apply. See dealer for details. Must take retail delivery by July 31, 2013</p>
 			</div>
-		</div>
+		<!-- </div> -->
 	</footer>
 
 	<!-- JAVASCRIPT -->
@@ -149,4 +176,3 @@
 
 </body>
 </html>
-
